<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_shoplist"
        android:icon="@drawable/bolsa_de_la_compra"
        android:title="@string/title_shoplist" />

    <item
        android:id="@+id/navigation_productos"
        android:icon="@drawable/pear"
        android:title="@string/title_productos" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_catalogos"
        android:icon="@drawable/open_book"
        android:title="@string/title_catalogos" />

    <item
        android:id="@+id/navigation_tickets"
        android:icon="@drawable/factura"
        android:title="@string/title_tickets" />

</menu>