<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.lugudu.marketplanner.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_tickets"
        android:name="com.lugudu.marketplanner.ui.tickets.TicketsFragment"
        android:label="@string/title_tickets"
        tools:layout="@layout/fragment_tickets" />

    <fragment
        android:id="@+id/navigation_shoplist"
        android:name="com.lugudu.marketplanner.ui.shoplists.ShopListsFragment"
        android:label="@string/title_shoplist"
        tools:layout="@layout/fragment_shoplists" />

    <fragment
        android:id="@+id/navigation_catalogos"
        android:name="com.lugudu.marketplanner.ui.catalogos.CatalogosFragment"
        android:label="@string/title_catalogos"
        tools:layout="@layout/fragment_catalogos" />


</navigation>